# applet-window-buttons

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL  INSTALLATION.md  README.md  install.sh
libappletdecoration/: CMakeLists.txt  appletdecorationplugin.cpp  appletdecorationplugin.h  auroraetheme.cpp  auroraetheme.h  buttonsmodel.cpp  buttonsmodel.h  commontools.cpp  commontools.h  config-decoration.h.cmake  decorationpalette.cpp  decorationpalette.h  decorationsmodel.cpp  decorationsmodel.h  environment.cpp  environment.h  padding.cpp  padding.h  previewbridge.cpp  previewbridge.h  previewbutton.cpp  previewbutton.h  previewclient.cpp  previewclient.h  previewitem.cpp  previewitem.h  previewsettings.cpp  previewsettings.h  previewshareddecoration.cpp  previewshareddecoration.h  qmldir  schemecolors.cpp  schemecolors.h  schemesmodel.cpp  schemesmodel.h  themeextended.cpp  themeextended.h  types.cpp  types.h  windowsystem.cpp  (+1 more)
libappletdecoration/qml/: AuroraeButton.qml
package/: metadata.desktop  metadata.json
package/contents/code/: tools.js
package/contents/config/: config.qml  main.xml
package/contents/ui/: LatteWindowsTracker.qml  PlasmaTasksModel.qml  main.qml
package/contents/ui/config/: ColorsComboBox.qml  ConfigGeneral.qml  DecorationsComboBox.qml  LockItem.qml  OrderableItem.qml  OrderableListView.qml
translate/: ReadMe.md  build  merge  template.pot  zh_CN.po
